--- a/src/ui/feature/user/UserCommentsList.pug
+++ b/src/ui/feature/user/UserCommentsList.pug
@@ -1,7 +1,7 @@
 script.
 	import api from '../../../api/index.js'
 	import { Time } from '../../../lib/index.js'
-	import TextHTML from '../../common/TextHTML.pug'
+	import FormattedHTML from '../../common/FormattedHTML.pug'
 	import PostComment from '../post/PostComment.pug'
 	import UserAvatar from './UserAvatar.pug'
 	export name = null
