--- a/src/ui/feature/post/PostComment.pug
+++ b/src/ui/feature/post/PostComment.pug
@@ -3,7 +3,7 @@ script.
 	import api from '../../../api/index.js'
 	
 	import Button from '../../common/Button.pug'
-	import TextHTML from '../../common/TextHTML.pug'
+	import FormattedHTML from '../../common/FormattedHTML.pug'
 	import UserByline from '../user/UserByline.pug'
 
 	export out_of_context = false
@@ -27,7 +27,7 @@ script.
 		<!-- svelte-ignore a11y-unknown-role -->
 		article.comment(class:comment-deleted={(comment.author === '[deleted]' && comment.body[0] === '[') || comment.removal_reason} class:comment-downvoted={comment.likes === false} class:comment-highlighted={short_id === focus_comment_short_id} class:comment-upvoted={comment.likes === true} class:comment-with-hidden-score={comment.score_hidden} class:comment-with-low-score={comment.score < 1} data-likes={comment.likes} data-radial-menu='comment' data-short_id={short_id} role='comment')
 			UserByline(distinguish={comment.distinguished || (comment.is_submitter && 'submitter')} flair_rich_text={comment.author_flair_richtext} flair_text={comment.author_flair_text} name={comment.author})
-			TextHTML(html={comment.body_html})
+			FormattedHTML(html={comment.body_html})
 		{#if out_of_context}
 			cite.comment-source-info
 				a(href='/r/{comment.subreddit}') in r/{comment.subreddit}
