--- a/src/ui/feature/post/PostHeadline.pug
+++ b/src/ui/feature/post/PostHeadline.pug
@@ -70,6 +70,7 @@ style.
 		display flex
 		gap 3px
 	.post-title
+		display inline
 		font-size 16px
 		font-weight var(--f-wght-strong)
 		letter-spacing 0
